# hackathon1-phase2

./: .claude.code-workspace  .env.example  .gitignore  README.md  ingest_from_sitemap.py  main.py  pyproject.toml  requirements.txt  reset_qdrant.py  retrieve.py
.specify/memory/: constitution.md
backend/src/: test_search_validation.py
my-website/: docusaurus.config.js  package-lock.json  package.json
my-website/docs/: chapter_01_physical_ai.md  chapter_02_humanoid_robotics.md  chapter_03_ros2_fundamentals.md  chapter_05_vla_systems.md  chapter_06_capstone.md
specs/001-embeddings-rag-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-textbook-gen/: plan.md  spec.md  tasks.md
specs/002-rag-retrieval-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-rag-chatbot-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-textbook-generation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/contract/: test_api_contracts.py  test_error_contracts.py
tests/integration/: test_chat_endpoint.py  test_connection.py  test_context_aware_responses.py  test_crawling_pipeline.py  test_embedding_pipeline.py  test_ingestion_pipeline.py  test_resilience.py  test_retrieval.py  test_validation_pipeline.py
tests/unit/: test_agent_service.py  test_chunker_service.py  test_crawler_service.py  test_embedding_service.py  test_qdrant_connection_service.py  test_retrieval_service.py  test_storage_service.py  test_text_cleaner_service.py  (+1 more)
(+62 files in other folders)
